# local825-intelligence-mcp

./: .env.template  .gitignore  Procfile  README.md  app.py  app_simple.py  enhanced_daily_report.py  enhanced_labor_intelligence_system.py  google_news_rss_scraper.py  local825_dashboard_widget.html  local825_targeted_intelligence_system.py  local825_union_analyzer.py  local825_union_analyzer_fixed.py  mcp_server.py  nixpacks.toml  pyproject.toml  quick_start.sh  railpack.toml  railway.toml  setup.py  setup_database.py  setup_railway_db.py  test_app.py  test_report.py
html2rss-web/mytribal-ai-automation-main/: .gitignore  AUTOMATION_SETUP.md  QUICK_START_GUIDE.md  README.md  TROUBLESHOOTING.md  com.mytribal.automation.plist  daily_ai_content_generator.py  daily_rss_scheduler.py  deaf_tech_video_publisher.py  main.py  main_improved.py  mytribal_rss_automation.py  mytribal_rss_daily.py  mytribal_rss_enhanced.py  mytribal_rss_production.py  publish_to_mytribal.py  rss_scheduler.py  rss_test_mytribal.py  scheduler.py  setup_cron.sh  simple_content_generator.py  test_automation.py  test_core_automation.py  test_minimal.py  test_new_content.py  test_notion_access.py  test_notion_only.py  test_rss.py  test_wordpress_connection.py  wordpress_only_publisher.py  wordpress_rest_publisher.py
local825-intelligence-plugin/: README.md  install.php  local825-intelligence.php  test-logging.php
local825-intelligence-plugin/admin/: ai-insights.php  company-tracking.php  dashboard-widget.php  dashboard.php  reports.php  settings.php  system-logs.php
src/: main.py  scraper.py
(+3 files in other folders)
